--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                 <div>
                     <h3 class="text-2xl font-bold gradient-text mb-6">Steven Harianto</h3>
                     <p class="text-gray-300 mb-4">Full Stack Developer specializing in web and mobile applications with expertise in AI and machine learning integration.</p>
-                    <p class="text-gray-400">Based in Austin, TX</p>
+                    <p class="text-gray-400">Based in Surabaya, Indonesia</p>
                 </div>
                 
                 <!-- Quick Links -->
@@ -461,7 +461,7 @@
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z" />
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 11a3 3 0 11-6 0 3 3 0 016 0z" />
                             </svg>
-                            <span class="text-gray-300">Austin, Texas</span>
+                            <span class="text-gray-300">Surabaya, Indonesia</span>
                         </li>
                     </ul>
                 </div>
