--- a/index.html
+++ b/index.html
@@ -390,37 +390,36 @@
                     </div>
                 </div>
 
-                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-                    <!-- Project 2 -->
-                    <div class="glass-card rounded-xl overflow-hidden shadow-xl group" data-aos="fade-up" data-aos-delay="100">
-                        <div class="relative overflow-hidden">
-                            <img src="https://via.placeholder.com/600x400" alt="Project 2" class="w-full h-56 object-cover transition-transform duration-500 group-hover:scale-110">
-                            <div class="absolute inset-0 bg-gradient-to-t from-purple-900 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-300"></div>
+                <!-- Project 2 -->
+                <div class="glass-card rounded-xl overflow-hidden shadow-xl group" data-aos="fade-up" data-aos-delay="200">
+                    <div class="relative overflow-hidden">
+                        <img src="https://via.placeholder.com/600x400" alt="Project 2" class="w-full h-56 object-cover transition-transform duration-500 group-hover:scale-110">
+                        <div class="absolute inset-0 bg-gradient-to-t from-purple-900 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-300"></div>
+                    </div>
+                    <div class="p-8 border-t border-fuchsia-500/30">
+                        <h3 class="text-xl font-bold mb-3 text-fuchsia-400">Project Title 2</h3>
+                        <p class="text-gray-300 mb-6">A brief description of the project, highlighting key features and technologies used.</p>
+                        <div class="flex flex-wrap gap-2 mb-6">
+                            <span class="px-2 py-1 bg-purple-900/50 text-xs text-fuchsia-300 rounded">Flutter</span>
+                            <span class="px-2 py-1 bg-purple-900/50 text-xs text-fuchsia-300 rounded">Firebase</span>
+                            <span class="px-2 py-1 bg-purple-900/50 text-xs text-fuchsia-300 rounded">Dart</span>
                         </div>
-                        <div class="p-8 border-t border-fuchsia-500/30">
-                            <h3 class="text-xl font-bold mb-3 text-fuchsia-400">Project Title 2</h3>
-                            <p class="text-gray-300 mb-6">A brief description of the project, highlighting key features and technologies used.</p>
-                            <div class="flex flex-wrap gap-2 mb-6">
-                                <span class="px-2 py-1 bg-purple-900/50 text-xs text-fuchsia-300 rounded">Flutter</span>
-                                <span class="px-2 py-1 bg-purple-900/50 text-xs text-fuchsia-300 rounded">Firebase</span>
-                                <span class="px-2 py-1 bg-purple-900/50 text-xs text-fuchsia-300 rounded">Dart</span>
-                            </div>
-                            <div class="flex justify-between">
-                                <a href="#" class="text-fuchsia-400 hover:text-pink-300 transition-colors flex items-center gap-1">
-                                    <span>View Live</span>
-                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14" />
-                                    </svg>
-                                </a>
-                                <a href="#" class="text-fuchsia-400 hover:text-pink-300 transition-colors flex items-center gap-1">
-                                    <span>View Code</span>
-                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4" />
-                                    </svg>
-                                </a>
-                            </div>
+                        <div class="flex justify-between">
+                            <a href="#" class="text-fuchsia-400 hover:text-pink-300 transition-colors flex items-center gap-1">
+                                <span>View Live</span>
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14" />
+                                </svg>
+                            </a>
+                            <a href="#" class="text-fuchsia-400 hover:text-pink-300 transition-colors flex items-center gap-1">
+                                <span>View Code</span>
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4" />
+                                </svg>
+                            </a>
                         </div>
                     </div>
+                </div>
                 
                 <!-- Project 3 -->
                 <div class="glass-card rounded-xl overflow-hidden shadow-xl group" data-aos="fade-up" data-aos-delay="300">
@@ -648,7 +647,7 @@
                         </a>
                         <a href="#" target="_blank" class="bg-purple-800/50 hover:bg-fuchsia-600/50 transition-colors p-3 rounded-lg" title="Instagram">
                             <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zM12 0C8.741 0 8.333.014 7.053.072 2.695.272.273 2.69.073 7.052.014 8.333 0 8.741 0 12c0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98C8.333 23.986 8.741 24 12 24c3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98C15.668.014 15.259 0 12 0zm0 5.838a6.162 6.162 0 100 12.324 6.162 6.162 0 000-12.324zM12 16a4 4 0 110-8 4 4 0 010 8zm6.406-11.845a1.44 1.44 0 100 2.881 1.44 1.44 0 000-2.881z"/>
+                                <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.354-2.617-6.78-6.979-6.98C15.668.014 15.259 0 12 0zm0 5.838a6.162 6.162 0 100 12.324 6.162 6.162 0 000-12.324zM12 16a4 4 0 110-8 4 4 0 010 8zm6.406-11.845a1.44 1.44 0 100 2.881 1.44 1.44 0 000-2.881z"/>
                             </svg>
                         </a>
                     </div>
